--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["browserslist", "fontawesome", "fortawesome"]
+  "cSpell.words": [
+    "browserslist",
+    "fontawesome",
+    "fortawesome",
+    "Linkedin",
+    "noreferrer"
+  ]
 }
